new service added

--- a/services.html
+++ b/services.html
@@ -162,7 +162,8 @@
                                 <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
                                     <div class="menu-section">
                                         <h3 class="menu-section-title">
-                                            <a href="/services/haircut-and-styling-hennur-road-bangalore" class="menu-section-link">
+                                            <a href="/services/haircut-and-styling-hennur-road-bangalore"
+                                                class="menu-section-link">
                                                 Haircut</a>
                                         </h3>
                                         <div class="menu-item-wrap">
@@ -200,7 +201,8 @@
                                         </p>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/haircut-and-styling-hennur-road-bangalore"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/haircut-and-styling-hennur-road-bangalore"
                                                 class="menu-section-link">
                                                 Hairstyling</a></h3>
                                         <div class="menu-item-wrap">
@@ -1118,7 +1120,8 @@
                                         </div>
                                     </div>
                                     <div class="menu-section">
-                                        <h3 class="menu-section-title"><a href="/services/nail-extensions.htmls"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalores"
                                                 class="menu-section-link">
                                                 Nail Extensions</a></h3>
                                         <div class="menu-item-wrap">
@@ -1142,7 +1145,8 @@
                                                 <div class="price-2">600 <span class="side-text">onwards</span></div>
                                             </div>
                                         </div>
-                                        <h3 class="menu-section-title"><a href="/services/nail-extensions.htmls"
+                                        <h3 class="menu-section-title"><a
+                                                href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalores"
                                                 class="menu-section-link">
                                                 Gel Polish</a></h3>
                                         <div class="menu-item-wrap">
@@ -1555,9 +1559,11 @@
                         <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
                             Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
                             class="footer-link-2">Keratin
-                            Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut &
+                            Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
+                            class="footer-link-2">Haircut &
                             Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
-                            MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
+                            MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
+                            class="footer-link-2">Nails
                             Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
                             Skincare</a>
                     </div>
