--- a/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
+++ b/services/nail-extensions-gel-nail-polish-hennur-road-bangalore.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <title>Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
     </title>
-    <link rel="canonical" href="https://www.sugarcoatsalon.in/services/hair-botox-treatment-hennur-road-bangalore">
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <link rel="canonical"
+        href="https://www.sugarcoatsalon.in/services/nail-extensions-gel-nail-polish-hennur-road-bangalore">
+    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
 " name="description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
 " property="og:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
 " name="description
 " property="og:description" />
-    <meta content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair
+    <meta content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore
 " property="twitter:title" />
-    <meta content="Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy & damaged hair. Get smooth, shiny, and healthy-looking hair.
+    <meta content="Get professional nail extensions and gel nail polish in Hennur Road, Bangalore. Long-lasting, glossy nails perfect for everyday wear and special occasions.
 " name="description
 " property="twitter:description" />
     <meta property="og:type" content="website" />
@@ -24,7 +25,7 @@
     <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Hair Botox Treatment in Hennur Road, Bangalore | Smooth & Frizz-Free Hair" />
+    <meta property="og:image:alt" content="Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore" />
     <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/sugarcoat-salon.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -69,19 +70,19 @@
     },
     {
       "@type": "WebPage",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#webpage",
-      "url": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore",
-      "name": "Hair Botox Treatment in Hennur Road, Bangalore",
-      "description": "Professional Hair Botox Treatment in Hennur Road, Bangalore to repair dry, frizzy and damaged hair.",
+      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#webpage",
+      "url": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore",
+      "name": "Nail Extensions & Gel Nail Polish in Hennur Road, Bangalore",
+      "description": "Professional nail extensions and gel nail polish services in Hennur Road, Bangalore.",
       "isPartOf": {
         "@id": "https://www.sugarcoatsalon.in/#website"
       }
     },
     {
       "@type": "Service",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#service",
-      "name": "Hair Botox Treatment",
-      "description": "A deep conditioning hair repair treatment that restores moisture, smoothness, and shine to damaged and frizzy hair.",
+      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#service",
+      "name": "Nail Extensions and Gel Nail Polish",
+      "description": "Professional nail extensions and gel nail polish services for long-lasting, glossy and well-shaped nails.",
       "areaServed": {
         "@type": "Place",
         "name": "Hennur Road, Bangalore"
@@ -93,7 +94,7 @@
     },
     {
       "@type": "BreadcrumbList",
-      "@id": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore#breadcrumb",
+      "@id": "https://www.sugarcoatsalon.in/nail-extensions-gel-nail-polish-hennur-road-bangalore#breadcrumb",
       "itemListElement": [
         {
           "@type": "ListItem",
@@ -104,8 +105,8 @@
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "Hair Botox Treatment",
-          "item": "https://www.sugarcoatsalon.in/hair-botox-treatment-hennur-road-bangalore"
+          "name": "Hair Colouring",
+          "item": "https://www.sugarcoatsalon.in/haircut-and-styling-hennur-road-bangalore"
         }
       ]
     }
@@ -144,91 +145,96 @@
             <div class="container w-container">
                 <div class="sections-wrapper">
                     <div class="about-section">
-                        <h1 class="heading h3 margin-bottom-60px">Hair Botox Treatment in Hennur Road, Bangalore</h1>
+                        <h1 class="heading h3 margin-bottom-60px">Nail Extensions & Gel Nail Polish in Hennur Road,
+                            Bangalore</h1>
                         <p class="paragraph medium-paragraph margin-bottom-20px">
-                            Looking for Hair Botox Treatment in Hennur Road, Bangalore? Hair Botox is a
-                            deep-conditioning treatment that restores moisture, repairs damage, and smoothens frizzy
-                            hair without altering your natural texture.
+                            Looking for expert nail extensions and gel nail polish in Hennur Road, Bangalore? Get
+                            beautifully shaped, long-lasting nails with premium products and hygienic techniques.
                         </p>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-before-after-hennur-road-bangalore.webp"
-                                        alt="Hair botox treatment before and after result showing smooth, frizz-free hair in Hennur Road Bangalore"
+                                        src="/assets/services/nail-extensions-gel-nail-polish-process-hennur-road-bangalore.webp"
+                                        alt="Nail extensions and gel nail polish application process at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">What Is Hair Botox Treatment?</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox is a non-chemical hair rejuvenation
-                                    treatment enriched with proteins, vitamins, amino acids, and nourishing oils. It
-                                    repairs hair from within and improves softness, shine, and manageability</div>
-                                <h2 class="heading h4">Benefits of Hair Botox</h2>
+                                <h2 class="heading h4">Nail Extension Services We Offer</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Visible reduction in frizz</li>
-                                    <li>Deep hydration for dry hair</li>
-                                    <li>Improved shine and smoothness</li>
-                                    <li>Repairs damage from heat & colouring</li>
-                                    <li>Safe for coloured and chemically treated hair</li>
+                                    <li>Acrylic/Gel nail extensions</li>
+                                    <li>Soft tip extensions</li>
+                                    <li>Nail refills & maintenance</li>
+                                    <li>Nail shaping & length correction</li>
+                                    <li>Gel nail polish</li>
+                                    <li>Nail art add-ons</li>
                                 </ul>
-                                <h2 class="heading h4">Who Should Get Hair Botox?</h2>
-                                <ul class="paragraph medium-paragraph">
-                                    <li>People with frizzy or rough hair</li>
-                                    <li>Dry, dull, or lifeless hair</li>
-                                    <li>Hair damaged due to colouring or styling</li>
-                                    <li>Those wanting smooth hair without straightening</li>
-                                </ul>
-                                <h2 class="heading h4">Hair Botox Treatment Process</h2>
-                                <ul class="paragraph medium-paragraph">
-                                    <li>Step 1: Hair cleansing</li>
-                                    <li>Step 2: Hair Botox application</li>
-                                    <li>Step 3: Heat activation</li>
-                                    <li>Step 4: Rinse & professional blow-dry</li>
-                                </ul>
-                                <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Duration: 2-2.5 hours<br>Results last: 3-5 months (with proper home care)
+                                <h2 class="heading h4">What Is Gel Nail Polish?</h2>
+                                <p class="paragraph medium-paragraph margin-bottom-20px">
+                                    Gel nail polish is a long-lasting polish cured under UV/LED light. It offers a
+                                    glossy finish, chip-free wear, and a natural look that lasts much longer than
+                                    regular nail polish.
                                 </p>
+                                <h2 class="heading h4">Benefits of Nail Extensions & Gel Polish</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Benefits of Nail Extensions & Gel Polish</li>
+                                    <li>Long-lasting glossy finish</li>
+                                    <li>Chip-resistant colour</li>
+                                    <li>Custom length and shape</li>
+                                    <li>Ideal for parties, weddings & daily wear</li>
+                                </ul>
+                                <h2 class="heading h4">Who Should Opt for Nail Extensions or Gel Polish?</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Short or weak nails</li>
+                                    <li>Special occasions & bridal events</li>
+                                    <li>Long-lasting everyday nails</li>
+                                    <li>Clean, polished look with minimal maintenance</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="about-section">
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Hair Botox vs Keratin</h2>
-                                <div class="paragraph medium-paragraph">Hair Botox focuses on repair and hydration,
-                                    while keratin is a straightening treatment. If you want natural-looking smooth hair
-                                    without chemicals, Hair Botox is ideal. <a href="/blogs/keratin-vs-hair-botox"
-                                        class="menu-section-link-blogs">Read
-                                        more about Keratin vs Botox
-                                        Treatment
-                                        for hair.</a></div>
+                                <h2 class="heading h4">Nail Extension & Gel Polish Process</h2>
+                                <ul class="paragraph medium-paragraph">
+                                    <li>Step 1: Nail consultation & prep</li>
+                                    <li>Step 2: Nail extension or gel polish application</li>
+                                    <li>Step 3: UV/LED curing</li>
+                                    <li>Step 4: Shaping, finishing & cuticle care</li>
+                                </ul>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Duration: 30-60 minutes(depends on service)<br>Maintenance: Every 4–6 weeks
+                                    recommended
+                                </p>
                                 <h2 class="heading h4">Aftercare Tips</h2>
                                 <ul class="paragraph medium-paragraph">
-                                    <li>Use sulphate-free shampoo. Preferably for Botox / Keratin aftercare.</li>
-                                    <li>Avoid excessive heat styling</li>
-                                    <li>Avoid excessive oiling</li>
-                                    <li>Follow stylist-recommended products</li>
+                                    <li>Avoid excessive water exposure initially</li>
+                                    <li>Avoid excessive soap,detergent and dishwashing liquids</li>
+                                    <li>Use gloves if doing gardening or crafts</li>
+                                    <li>Do not peel gel polish</li>
+                                    <li>Get timely refills for extensions</li>
                                 </ul>
-                                <h2 class="heading h4">FAQs – Hair Botox in Hennur Road</h2>
-                                <h3 class="paragraph large-paragraph">Is Hair Botox safe for all hair types?</h3>
+                                <h2 class="heading h4">FAQs – Nail Extensions & Gel Nail Polish</h2>
+                                <h3 class="paragraph large-paragraph">Are nail extensions safe?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Yes, it’s safe and suitable for most hair types, including coloured hair.
+                                    Yes, when applied and removed professionally.
                                 </p>
-                                <h3 class="paragraph large-paragraph">Does Hair Botox straighten hair permanently?</h3>
+                                <h3 class="paragraph large-paragraph">How long does gel nail polish last?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    No, it smoothens and reduces frizz without permanent straightening.
+                                    Typically 2–3 weeks without chipping.
                                 </p>
-                                <h3 class="paragraph large-paragraph">How long does Hair Botox last?</h3>
+                                <h3 class="paragraph large-paragraph">Can I remove gel polish at home?</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Results usually last 3–5 months depending on home hair care routine.
+                                    Professional removal is recommended to avoid nail damage.
                                 </p>
                             </div>
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
-                                        src="/assets/services/hair-botox-treatment-process-salon-hennur-road.webp"
-                                        alt="Hair botox treatment process being applied at salon in Hennur Road Bangalore"
+                                        src="/assets/services/nail-extensions-nail-art-design-hennur-road-bangalore.webp"
+                                        alt="Nail art design with nail extensions, rhinestones and floral details at a salon in Hennur Road Bangalore"
                                         style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
@@ -237,10 +243,10 @@
                         </div>
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h4">Book Hair Botox Treatment in Hennur Road</h2>
+                                <h2 class="heading h4">Book Nail Extensions & Gel Nail Polish in Hennur Road</h2>
                                 <p class="paragraph medium-paragraph margin-bottom-20px">
-                                    Visit our salon near Hennur Road, Bangalore for professional Hair Botox Treatment
-                                    and experience smoother, healthier hair.
+                                    Visit our salon near Hennur Road, Bangalore for premium nail extensions and gel nail
+                                    polish services.
                                 </p>
                                 <div class="align-button-center">
                                     <!-- <div class="heading h4">Ready to look your absolute best for your
@@ -280,7 +286,7 @@
                         href="/contact" class="footer-link">Contact Us</a></div>
                 <div class="footer-block-two"><a class="footer-link">Popular Services</a>
                     <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
-                        Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
+                        Treatment</a><a href="/services/hair-colouring-hennur-road-bangalore"
                         class="footer-link-2">Keratin
                         Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
                         class="footer-link-2">Haircut &
