--- a/services/hair-colouring-hennur-road-bangalore.html
+++ b/services/hair-colouring-hennur-road-bangalore.html
@@ -289,9 +289,11 @@
                     <a href="/services/hair-botox-treatment-hennur-road-bangalore" class="footer-link-2">Botox
                         Treatment</a><a href="/services/keratin-treatment-hennur-road-bangalore"
                         class="footer-link-2">Keratin
-                        Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore" class="footer-link-2">Haircut &
+                        Treatment</a><a href="/services/haircut-and-styling-hennur-road-bangalore"
+                        class="footer-link-2">Haircut &
                         Styling</a><a href="/services/bridal-party-makeup.html" class="footer-link-2">Bridal
-                        MakeUp</a><a href="/services/nail-extensions.html" class="footer-link-2">Nails
+                        MakeUp</a><a href="/services/nail-extensions-gel-nail-polish-hennur-road-bangalore"
+                        class="footer-link-2">Nails
                         Extensions</a><a href="/services/facial-skin-care.html" class="footer-link-2">Facial &
                         Skincare</a>
                 </div>
